# currentview

./: .gitignore  README.md  plotstyle_guide.md  pyproject.toml  run.py
dash_app/: __init__.py  app.py  config.py
dash_app/callbacks/: __init__.py  conditions.py  file_browser.py  initialization.py  plot_settings.py  theme.py  visualization.py
dash_app/layout/: __init__.py  components.py  main_layout.py  modals.py  plot_style_settings.py
dash_app/styles/: theme_styles.py
dash_app/utils/: __init__.py  design.py  file_utils.py  validators.py  visualizer_extensions.py
example/example_data/: subset_with_psi_canonical_oligos_sorted.bam  subset_with_psi_canonical_oligos_sorted.bam.bai
src/currentview/: __init__.py  __main__.py  genomic_visualizer.py  gmm_visualizer.py  io_processor.py  signal_visualizer.py  stats_visualizer.py
src/currentview/app/: __init__.py  config.py  run.py
src/currentview/app/callbacks/: __init__.py  conditions.py  file_browser.py  initialization.py  plot_settings.py  theme.py  ui_interactions.py  visualization.py
src/currentview/app/layout/: __init__.py  components.py  elements.py  main_layout.py  modals.py  plot_style_settings.py
src/currentview/app/styles/: theme_styles.py
src/currentview/app/utils/: __init__.py  file_utils.py  processing_factory.py  validators.py  visualizer_extensions.py
src/currentview/cli/: __init__.py  from_tsv.py  manual.py
src/currentview/gmm/: __init__.py  gmm_calculator.py  gmm_handler.py  gmm_tests.py  gmm_visualizer.py
src/currentview/readers/: __init__.py  bam_reader.py  pod5_reader.py
src/currentview/stats/: __init__.py  stats_calculator.py  stats_funcs.py
src/currentview/umap/: __init__.py  umap_handler.py  umap_visualizer.py
src/currentview/utils/: __init__.py  arg_utils.py  color_utils.py  data_classes.py  path_utils.py  plotly_utils.py  visualization_utils.py
src/genomicvisualizer/: __init__.py  genomic_visualizer.py  io_processor.py  signal_visualizer.py
src/genomicvisualizer/readers/: bam_reader.py  pod5_reader.py
src/genomicvisualizer/utils/: data_classes.py
