[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "genomicvisualizer"
description = "A package for analyzing tRNA ionic current signal"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "pysam>=0.22.0",  # For BAM file reading
    "pod5>=0.3.23",    # For POD5 file reading
]

[tool.black]
line-length = 88  # Slightly longer lines work well for scientific code

[tool.isort]
profile = "black"  # Makes isort compatible with black

[flake8]
max-line-length = 88
extend-ignore = "E203"  # Black-compatible

