[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "currentview"
version = "0.1.0"
description = "A package for analyzing tRNA ionic current signal"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "plotly>=5.14.0",
    "kaleido>=0.2.0",
    "nbformat>=5.10.4",
    "pysam>=0.22.0",
    "scikit-learn<2.0,>=1.4",
    "umap-learn>=0.5.11",
    "pod5>=0.3.23",
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "scipy>=1.10.0",
    "pandas>=1.5.0",
]

[project.optional-dependencies]
dev = ["black>=23.0.0","isort>=5.12.0","flake8>=6.0.0","pytest>=7.0.0","pytest-cov>=4.0.0"]

[project.scripts]
currentview = "currentview.__main__:main"
currentview-app = "currentview.app.run:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["currentview"]

[tool.setuptools.package-data]
currentview = ["app/assets/*"]
